<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:background="@color/black">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/dialog_material_warning_title"
            android:textColor="@color/white"
            android:textSize="25sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/dialog_material_warning_left"/>
        <EditText
            android:id="@+id/et_material_warning_percent"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:textSize="18sp"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:background="@drawable/et_selector"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/dialog_material_warning_right"/>
        <EditText
            android:id="@+id/et_material_warning_station"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:inputType="numberDecimal"
            android:background="@drawable/et_selector"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/dialog_material_warning_station"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="5dp">
        <!-- 确定 -->
        <Button
            android:id="@+id/btn_confirm"
            style="@style/style_btn"
            android:layout_width="80dp"
            android:layout_centerInParent="true"
            android:text="@string/btn_confirm"/>

        <!-- 取消 -->
        <Button
            android:id="@+id/btn_cancel"
            style="@style/style_btn"
            android:layout_width="80dp"
            android:text="@string/btn_cancel"
            android:layout_marginLeft="20dp"
            android:layout_centerInParent="true"
            android:layout_toRightOf="@+id/btn_confirm"/>
    </RelativeLayout>
</LinearLayout>